--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -16,10 +16,10 @@
    moda(s)
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir analizet skaitlu masivu izmantojot logiskas fonkcijas piemēram while loop</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/numbinf">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture1.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
 
@@ -30,10 +30,10 @@
    tabula ar atlikumiem no dalījuma
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir izveidot sakartotu tabulu ar dalijumu atlikumiem izmantojot matematisko funkciju un loopu palidzibu piemēram while loop</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/tab.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture2.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
 
@@ -52,14 +52,14 @@
    summas vērtības attēlošana
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir iegut programu kas apreikina funkcijas vertibu izmantojot matematiskas funkcijas piemēram sqrt</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
     <a href="...">
     <img src="...">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture3.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (individuāls uzdevums)</pre>
 
@@ -72,14 +72,14 @@
    funkcijas vērtības atrašanas vietas noteikšana ar dihotomijas metodi
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir atelot funkciju izmantojot izmantojot papildus funkciju bibliotekas piemēram numpy</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
-    <a href="...">
+    <a href="">
     <img src="...">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2_drawing.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture4.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (individuāls uzdevums)</pre>
 
@@ -92,14 +92,14 @@
    funkcijas otrās kārtas atvasinājuma skaitliskā noteikšana un zīmēšana
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir zimet atvasinajumu funkcijas izmantojot papildus funkciju bibliotekas piemēram numpy</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
     <a href="...">
     <img src="...">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/Derivate.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture5.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (individuāls uzdevums)</pre>
 
@@ -111,14 +111,14 @@
    Montekarlo metodes pielietojuma noteikšana
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir generet random skaitlus noteiktos intervalos izmantojot random funkciju piemēram  x.append(random.uniform(a,b))</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
     <a href="...">
     <img src="...">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/quiz1.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/picture6.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (individuāls uzdevums)</pre>
 
@@ -129,10 +129,10 @@
    ziņojuma dekodēšana
    </pre>
    <h6>Uzdevuma apraksts (ko es no tā sarotu):</h6>
-    <pre>Uzdevuma galvenais mērķis ir ... izmantojot ... piemēram ...</pre>
+    <pre>Uzdevuma galvenais mērķis ir atkodet failu un iegut tekstu izmantojot XOR izteiksmi piemēram xor = ord(y) ^ ord(z)</pre>
    <h6>Attēls(i) ar rezultātiem</h6>
-    <a href="...">
-    <img src="...">
+    <a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/c04.py">
+    <img src="https://github.com/ArnoldSlionskis/DMI/blob/master/pictures7.jpg">
     </a>
     <pre>Nospiežot uz attēla var pāriet uz uzdevuma kodu github'ā (klases darbs)</pre>
 
@@ -141,63 +141,63 @@
   <h5>Nodarbību vēsture</h5>
    <ol>
     <li><a href="...">mācību nedēļa (04.09 - 08.09)</a></li>
-    <li><a href="...">mācību nedēļa (11.09 - 15.09)</a></li>
-    <li><a href="...">mācību nedēļa (18.09 - 22.09)</a></li>
-    <li><a href="...">mācību nedēļa (25.09 - 29.09)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/36e9e8317e2abbb3de695fe09fb3d2dcc4630d45">mācību nedēļa (11.09 - 15.09)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/bf3e0abd91bcffdd9f462f419b0f40889585b778">mācību nedēļa (18.09 - 22.09)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/3bfc1544aa90d897f929dd7420f2e2a2b55549bd">mācību nedēļa (25.09 - 29.09)</a></li>
     <li><a href="...">mācību nedēļa (02.10 - 06.10)</a></li>
-    <li><a href="...">mācību nedēļa (09.10 - 13.10)</a></li>
-    <li><a href="...">mācību nedēļa (16.10 - 20.10)</a></li>
-    <li><a href="...">mācību nedēļa (23.10 - 27.10)</a></li>
-    <li><a href="...">mācību nedēļa (30.10 - 03.11)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/fc6dd529151a7d2c2bbb9fe4766da426084b6ad9">mācību nedēļa (09.10 - 13.10)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/bb53714e668f73f2d7b7d0b5d8b7716b91ea681c">mācību nedēļa (16.10 - 20.10)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/f8651f93d8a8f2397ddf9cdd7716513c344a23c7">mācību nedēļa (23.10 - 27.10)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/9066586e038a929590cb08737ff78aae1f2ecf80">mācību nedēļa (30.10 - 03.11)</a></li>
     <li><a href="...">mācību nedēļa (06.11 - 10.11)</a></li>
-    <li><a href="...">mācību nedēļa (13.11 - 17.11)</a></li>
-    <li><a href="...">mācību nedēļa (21.11 - 24.11)</a></li>
-    <li><a href="...">mācību nedēļa (27.11 - 01.12)</a></li>
-    <li><a href="...">mācību nedēļa (04.12 - 08.12)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/46a5fb74960e5d9bc6db43ae4ab667d931929644">mācību nedēļa (13.11 - 17.11)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/7d65b352fc01919b1e71030256559904a20bd866">mācību nedēļa (21.11 - 24.11)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/37d5d530b0423cfcb5c199caeb4c8e8812438a30">mācību nedēļa (27.11 - 01.12)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/ba53b5e84fa4d2c603304dc09b232c98e1cc5a22">mācību nedēļa (04.12 - 08.12)</a></li>
     <li><a href="...">mācību nedēļa (11.12 - 15.12)</a></li>
-    <li><a href="...">mācību nedēļa (18.12 - 22.12)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/commit/d96ce61ea88ee851a9ac88bd6454a4ccb3c6c3b5">mācību nedēļa (18.12 - 22.12)</a></li>
    </ol>
 
 
   <br>
   <h5>Tēmas</h5>
    <ul>
-    <li>shell: operētājsistēmas noskaidrošana - ...</li>
-    <li>shell: lietotāja vārda noskaidrošana - ...</li>
-    <li>shell: atrašanas vietas (failu sistēmā) noskaidrošana - ...</li>
-    <li>shell: pieslēgšanas citai darba stacijai (citam serverim) - ...</li>
+    <li>shell: operētājsistēmas noskaidrošana - uname</li>
+    <li>shell: lietotāja vārda noskaidrošana - who</li>
+    <li>shell: atrašanas vietas (failu sistēmā) noskaidrošana - pwd</li>
+    <li>shell: pieslēgšanas citai darba stacijai (citam serverim) - ssh</li>
     <li>shell: darbības ar failu sistēmas objektiem (failiem, mapēm)</li>
      <ul>
-      <li>... - ...</li>
+      <li>ls - la</li>
      </ul>
     <li>shell: darbības ar git'u</li>
      <ul>
-      <li>... - ...</li>
+      <li>git commit - m</li>
      </ul>
-    <li>shell: shell interpretatora atrašanas vieta - ...</li>
+    <li>shell: shell interpretatora atrašanas vieta - #!/bin/bash</li>
     <li>shell: shell skripta(u) piemērs(i)</li>
      <ul>
-      <li><a href="...">shell: skripta neliels apraksts - ...</a></li>
+      <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/combine">shell: skripta neliels apraksts - vienkars kalkulators</a></li>
      </ul>
-    <li><a href="...">shell: mainīgie</a></li>
-    <li><a href="...">shell: datu ievade/izvade</a></li>
-    <li><a href="...">shell: operācijas</a></li>
-    <li><a href="...">shell: nosacījuma operators</a></li>
-    <li><a href="...">shell: cikla operators</a></li>
-    <li>Python: Python interpretatora atrašanas vieta - ...</li>
-    <li>Python: vide ērtam darbam ar Python'u - ...</li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/combine">shell: mainīgie</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/combine">shell: datu ievade/izvade</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/combine">shell: operācijas</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/combine">shell: nosacījuma operators</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/averageV2">shell: cikla operators</a></li>
+    <li>Python: Python interpretatora atrašanas vieta - #!/usr/bin/python</li>
+    <li>Python: vide ērtam darbam ar Python'u - idle</li>
     <li>Python: Python skripta(u) piemērs(i)</li>
      <ul>
-      <li><a href="...">Python: skripta neliels apraksts - ...</a></li>
+      <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: skripta neliels apraksts - arctangensa apreikinatajs</a></li>
      </ul>
-    <li><a href="...">Python: mainīgie</a></li>
-    <li><a href="...">Python: datu ievade/izvade</a></li>
-    <li><a href="...">Python: operācijas</a></li>
-    <li><a href="...">Python: nosacījuma operators</a></li>
-    <li><a href="...">Python: cikla operators(i)</a></li>
-    <li><a href="...">Python: lietotāja funkcija</a></li>
-    <li><a href="...">Python: masīvs</a></li>
-    <li><a href="...">Python: darbs ar failiem</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: mainīgie</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: datu ievade/izvade</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: operācijas</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: nosacījuma operators</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: cikla operators(i)</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/atanV2.py">Python: lietotāja funkcija</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/quiz1.py">Python: masīvs</a></li>
+    <li><a href="https://github.com/ArnoldSlionskis/DMI/blob/master/PYTHON/c04.py">Python: darbs ar failiem</a></li>
    </ul>
  </body>
 </html>
